--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>unquote</title>
+    <title>My brand's portal</title>
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, user-scalable=0, initial-scale=1.0">
     <script src="../bower_components/platform/platform.js"></script>
     <link rel="import" href="components/oo-portal.html">
